--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>TodoList</title>
 </head>
 
-<body class="bg-success-subtle text-success-emphasis"> <!-- Establecer el fondo de la página -->
+<body class="bg-success-subtle text-success-emphasis"> 
     <div class="container mt-5">
-        <h1 class="mb-4 text-center">TodoList</h1> <!-- Título fuera de la tarjeta -->
+        <h1 class="mb-4 text-center">TodoList</h1> 
         <div class="row justify-content-center">
             <div class="col-md-6 ">
                 <div class="input-group mb-3">
@@ -17,7 +17,7 @@
                     <button onclick="addTask()" class="btn btn-primary">Agregar tarea</button>
                 </div>
                 <ul id="taskList" class="list-group">
-                    <!-- Se agregarán las tareas -->
+                    <!-- Se agregarán  tareas -->
                 </ul>
             </div>
         </div>
